# infergate

./: .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  PROGRESS.md  README.md  SCRATCHPAD.md  concept.md  pyproject.toml
demo/: config.yaml  demo_requests.sh  gateway.py  run_demo.sh
feedback/: RESPONSE_TEMPLATE.md  ROUND_TEMPLATE.md  SIGNAL.md  addressed_01_v0.1.2.md  addressed_02_v0.1.3.md  addressed_03_v0.1.4.md  addressed_04_v0.1.4.md  addressed_05_v0.1.8.md  addressed_05_v0.1.9.md  addressed_06_v0.2.0.md  round_01_v0.1.1.md  round_02_v0.1.2.md  round_03_v0.1.3.md  round_04_v0.1.4.md  round_05_v0.1.8.md  round_06_v0.1.9.md
plans/: 20260514_feature_roadmap.md
src/infergate/: __init__.py  config.py  embeddings.py  protocols.py  router.py  selector.py  signals.py  types.py
src/infergate/backends/: __init__.py  ollama.py  openai_compat.py
tests/: conftest.py  test_routing.py
