[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infergate"
version = "0.1.0"
description = "Semantic routing layer for AI inference backends"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Jerzy", email = "jerzyk.majchrzak@gmail.com" }
]
keywords = ["ai", "llm", "routing", "inference", "gateway", "semantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev  = ["pytest>=8.0", "pytest-asyncio>=0.23", "black", "mypy"]
demo = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "pydantic-settings>=2.0"]

[project.urls]
Homepage = "https://github.com/Jermalk/infergate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
