[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infergate"
version = "0.1.5"
description = "Semantic routing layer for AI inference backends"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Jerzy", email = "jerzyk.majchrzak@gmail.com" }
]
keywords = ["ai", "llm", "routing", "inference", "gateway", "semantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
local-embed = ["sentence-transformers>=3.0"]
dev  = ["pytest>=8.0", "pytest-asyncio>=0.23", "black", "mypy", "sentence-transformers>=3.0"]
demo = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "pydantic-settings>=2.0", "pydantic>=2.0", "pyyaml>=6.0", "sentence-transformers>=3.0"]

[project.urls]
Homepage = "https://github.com/Jermalk/infergate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
